# sollve_regression

./: LICENSE  Makefile  README.md  profile.json  profile_1.json
include/: ompreg.h
openmp/threaded_kernel_launch/: CMakeLists.txt  main.c
threaded_data_transfer/: main.c  threaded_data_transfer_large_data_transfers.c  threaded_data_transfer_large_data_transfers_reduction.c  threaded_data_transfer_small_data_transfers.c  threaded_data_transfer_small_data_transfers_reduction.c
threaded_kernel_launch/: main.c
